--- a/intropage.html
+++ b/intropage.html
@@ -36,5 +36,10 @@
 the buck enters the ark <br>
 slowly…
 </p>
-    
+      <section class="footer" id="footer">
+          <div style="display: flex;">
+            <div style="flex: 1; padding: 100px;">
+            <p class="footer" style= "text-align: center">©2023 Ryan Winegardner </p>
+              </div>
+      </section>
 </html>
