--- a/haiku.html
+++ b/haiku.html
@@ -167,7 +167,12 @@ contemplates him <br>
 just the same. </p>
 
 
-
+      <section class="footer" id="footer">
+          <div style="display: flex;">
+            <div style="flex: 1; padding: 100px;">
+            <p class="footer" style= "text-align: center">©2023 Ryan Winegardner </p>
+              </div>
+      </section>
     
 
     
