--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <p> <a href="intropage.html" target="_blank">Introduction</a> </p>
         <p> <a href="morocco.html" target="_blank">Experiences in Morocco</a> </p>
         <p> <a href="haiku.html"target="blank">Haiku</a> </p>
+	<p> <a href="french.html" target="_blank">Choses En Français</a> </p>
 </section>
       
       <section>
