--- a/intropage.html
+++ b/intropage.html
@@ -12,7 +12,7 @@
      <p>I learned html and coded this website after talking to my friend, Amit Vallabh, who had recently done something similar. He said it would be a great way to showcase my writing and my thoughts. While I've never been a CS kid, he convinced me it would be easy enough for me to do this. I'm not sure if it was as easy as he said, but I actually found it a fun experience to learn html and make something tangible. This has certainly been a rewarding experience, as I continue to learn website building. </p>
 
 
-    <p>So, I made this website to showcase my writing. This is something deeply important to me. If you continue to read this website, you will see how the art of writing has gotten me through tough times, and helped make me the person I am today. </p>
+    <p>So, I made this website to showcase my writing. This is something deeply important to me. If you continue to read this website, you will see how the art of writing has helped make me the person I am today. </p>
     <p style= "color: #339933">Peace and Love, RTW</p>
     </div>
     
