--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <link href='main.css' rel='stylesheet'>
   <head>
     <title>Ryan Winegardner</title>
+	  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
       <h1 style= "color: #339933"> <u>Ryan Winegardner</u></h1>
