--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
     <link href='main.css' rel='stylesheet'>
   <head>
     <title>Ryan Winegardner</title>
-	  <link rel="shortcut icon" type="image/x-icon" href="favicon-16x16.png">
-	  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	  <link rel="shortcut icon" type="image/x-icon" href="favicon-16x16.png/favicon.ico">
 
   </head>
   <body>
