--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link href='main.css' rel='stylesheet'>
   <head>
     <title>Ryan Winegardner</title>
-	  <link rel="shortcut icon" type="image/x-icon" href="favicon-16x16.png/favicon.ico">
+	  <link rel="shortcut icon" type="image/x-icon" href="favicon-16x16.png">
 
   </head>
   <body>
