--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h4>I'm also a writer.</h4>
             </div>
             <div style="flex: 1; padding: 10px;">
-            <img src="IMG_3150.jpeg" alt="Image" style="float:left; margin-right:10px;">
+            <img src="" alt="Image" style="float:left; margin-right:10px;">
         </div>
             <body>
 	       <div class="right">
