--- a/haiku.html
+++ b/haiku.html
@@ -166,6 +166,181 @@ becoming. </p>
 contemplates him <br>
 just the same. </p>
 
+<p>
+Outside the laughter –<br>
+a form kneels<br>
+in his own vomit...
+</p>
+
+<p>
+Under the cherry blossoms –<br>
+a mother kneels<br>
+before her child.
+</p>
+
+<p>
+Image from a distant past –<br>
+she picks flowers<br>
+in the garden.
+</p>
+
+<p>
+Midnight –<br>
+the SUV glides<br>
+without noise.
+</p>
+
+<p>
+Warm spring day –<br>
+the gnats swarm<br>
+like a thunderhead.
+</p>
+
+<p>
+One more cup of coffee<br>
+while I listen to<br>
+rain on the window...
+</p>
+
+<p>
+Overcome by<br>
+passing beauty!<br>
+An afternoon rainstorm.
+</p>
+
+<p>
+The cosmos glimmers<br>
+through my old<br>
+whiskey bottles.
+</p>
+
+<p>
+In the honeysuckle shades<br>
+a squirrel<br>
+stalks its prey...
+</p>
+
+<p>
+In the sedge grass<br>
+two squirrels circle<br>
+as in a ritual...
+</p>
+
+<p>
+an ancient ritual –<br>
+two squirrels circle<br>
+in daffodil leaves.
+</p>
+
+<p>
+Just before the storm<br>
+the crow dances<br>
+with two jays.
+</p>
+
+<p>
+Just before the storm<br>
+two jays squawk<br>
+at the praying crow.
+</p>
+
+<p>
+Katoubia mosque<br>
+in the red dusk –<br>
+even the dog wails!
+</p>
+
+<p>
+In the shadow<br>
+of medina walls<br>
+a stray cat sleeps...
+</p>
+
+<p>
+A weary ant<br>
+riding my backpack<br>
+to the next stop...
+</p>
+
+<p>
+Starlings in the dusk<br>
+like magic stars<br>
+in magic skies.
+</p>
+
+<p>
+Like the dance of the planets<br>
+starlings circle<br>
+in the dusk.
+</p>
+
+<p>
+The Frog King<br>
+surveys his domain<br>
+from a throne of rock.
+</p>
+
+<p>
+Springtime –<br>
+A salamander<br>
+sleeping on the pond-floor.
+</p>
+
+<p>
+While she picks flowers<br>
+the frog croaks<br>
+and croaks and croaks...
+</p>
+
+<p>
+The croaking frog<br>
+perches on his rock –<br>
+the whole pond stops to listen.
+</p>
+
+<p>
+We sit under<br>
+magnolia shade...<br>
+the flowers bloom so briefly!
+</p>
+
+<p>
+Where the hills are gentle<br>
+and the grasses sweet –<br>
+spending time with you...
+</p>
+
+<p>
+Hiding from the rain<br>
+these columns, too,<br>
+don’t seem to end...
+</p>
+
+<p>
+The bullfrog and I<br>
+staring at each other<br>
+from across the pond.
+</p>
+
+<p>
+Where grass ripples like water<br>
+and sunshine melts into<br>
+Blueridge mountain mist...
+</p>
+
+<p>
+Holiness –<br>
+laughter chimes<br>
+throughout the garden...
+</p>
+
+<p>
+Two blue jays in the orchard –<br>
+renegade lovers<br>
+under apple tree shade.
+</p>
+
+
 
       <section class="footer" id="footer">
           <div style="display: flex;">
