--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             
             <div style="display: flex;">
             <div style="flex: 1; padding: 10px;">
-            <h4> I am a third year student at the University of Virginia, studying anthropology and global commerce.  </h4>
+            <h4> I am a fourth year student at the University of Virginia, studying anthropology and global commerce.  </h4>
             <p></p>
-            <h4> I've interned for the High Atlas Foundation, an NGO promoting development in Marrakech. I currently work with the behavioral research lab of the Darden School of Business. </h4>
+            <h4> In 2022, I interned for the High Atlas Foundation, an NGO promoting development in Marrakech. In 2023, I interned with Nelson Wilmotte Agency, an architecture firm in Paris, where I conducted a multimodal marketing campaign. I currently work with the behavioral research lab of the Darden School of Business. </h4>
             <p></p>
             <h4>I'm also a writer.</h4>
             </div>
